05-docker-kubernetes/ssr-tutorial2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssr-service
spec:
  type: NodePort
  selector:
    app: ssr
  ports:
  - port: 4000
    targetPort: 4000
