05-docker-kubernetes/ssr-tutorial2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssr-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /bet-yaakov
        pathType: Prefix
        backend:
          service:
            name: ssr-service
            port:
              number: 4000
